--- a/package.json
+++ b/package.json
@@ -14,17 +14,16 @@
     "prepare": "node ./scripts/generate-sitemap.mjs"
   },
   "dependencies": {
-    "next": "14.2.5",
-    "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "next": "^14.2.31",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/node": "^20.19.9",
-    "@types/react": "^18.2.79",
-    "@types/react-dom": "^18.2.25",
+    "@types/react": "^18.3.23",
+    "@types/react-dom": "^18.3.7",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.5",
     "typescript": "^5.4.5"
   }
-  
 }
